Arreglando estilos y componentes
Arreglando estilos y componentes

--- a/public/index.html
+++ b/public/index.html
@@ -33,16 +33,11 @@
     </form>
   </div>
 </nav>
-<div class="container mt-3">
-    <div id="root" class="row"></div>
-    
-  </div>
-<footer class="text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 text-white-50">
-        <p>Copyright © TMC. All rights reserved.</p>
-      </div>
+<div id="root"></div>
+<footer class="text-center" style="height: 50px; max-height: 50px">
+  <div class="row">
+    <div class="col-12 text-white-50">
+      <p>Copyright © TMC. All rights reserved.</p>
     </div>
   </div>
 </footer>
