--- a/FrondEnd/index.html
+++ b/FrondEnd/index.html
@@ -110,10 +110,10 @@
                 </h1>
 
                 <div class="home-content__buttons">
-                    <a href="#contact" class="smoothscroll btn btn--stroke">
+                    <a href="/backoffice" class="btn btn--stroke">
                         Register
                     </a>
-                    <a href="#about" class="smoothscroll btn btn--stroke">
+                    <a href="/backoffice" class="btn btn--stroke">
                         Login
                     </a>
                 </div>
